# WriteNow

api/: .gitignore  pyproject.toml
api/app/: database.py  main.py  ml.py
api/app/router/api/: api.py
api/app/router/api/books/: books.py
api/app/router/api/trends/: trends.py
api/notebooks/: 240522-alska.ipynb
crawler/bookstore/spiders/: aladin_best.py
db/: raw_books.jsonl  seed.sql
web/: package-lock.json  package.json  vite.config.js
web/src/: AiCarousel.js  App.jsx  Book.jsx  BookTable.js  Books.jsx  Chart.js  ChartCarousel.js  Dashboard.js  GenerateImage.js  GenreTable.js  KeywordTable.js  Login.js  MainPageBookTable.js  ResponsiveAppBar.js  Search.js  SearchOption.js  SearchResult.js  SearchTable.js  SearchText.js  SharedInput.js  UnsavedChangesContext.js  WholeBookTrend.js  WholeKeywordTrend.js  YearTrend.js  fade.css  index.js  router.jsx  styles.css  useTypingEffect.js
